This is the changelog for developers, != changelog for the end user 
that we distribute with the binaries. (see changelog)

07/10/2006
- Added "select inside" and "select touching"
  Both functions now work with multiple selectionbrushes, allowing complex
  selection operations.
- Added entries for the selectionfunctions in "Edit" and the main toolbar.

06/10/2006
namespace
- Changed ETB not to show any texture if a tag search doesn't match anything (Shaderman)
- Added View -> Filter -> "Invert filters/Reset filters" function (Shaderman)
- Fixed (TODO) Textures: remove "shaders only" option for doom3 (Shaderman)
- Fixed show shaders / shader only / shader info for doom3 and .wad file games (Shaderman)

03/10/2006
namespace
- Fix for Bug 1113 (Topsun)
  (http://zerowing.idsoftware.com/bugzilla/show_bug.cgi?id=1113)

03/10/2006
namespace
- Changed ETB tag toolbar to a notebook with tag/texture pages (Shaderman)
- Added a context menu (add/delete/rename tag) to the ETB tag tree view (Shaderman)
- Added new win32 installer HOWTO (Shaderman/Topsun)

01/10/2006
namespace
- Added missing xml files for win32 installer

30/09/2006
namespace
- Fixed Etb saving custom tags to global tagfile (Shaderman/namespace)
- Fixed postbuild step for brushexport, shaderplug and sunplug (Shaderman)
- Added installersupport for new files and plugins (Shaderman)

30/09/2006
namespace
- Added LocalLcPath to plugin interface
- Added enhanced Texturebrowser (ETB) by Shaderman
- Added shaderplug by Shaderman, accompanies the ETB
- Added xmltagging lib by Shaderman, accompanies the ETB
- Added new icons for ETB, Console, Entityinspector and Lighteditor
- Fixed minor warning in Sunplug Project
- Fixed PATH_MAX namecollision in ptrview plugin on Linux
- Final fix for 64 bit patch.h issue



12/09/2006
namespace
- Fixed 64 Bit issue in patch.h, see http://zerowing.idsoftware.com/bugzilla/show_bug.cgi?id=1109
  for details

11/09/2006
namespace